# ChangeLog for media-libs/openal
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/ChangeLog,v 1.148 2011/11/26 18:27:02 armin76 Exp $

  26 Nov 2011; Raúl Porcel <armin76@gentoo.org> openal-1.13.ebuild:
  alpha/ia64/sparc stable wrt #388577

  06 Nov 2011; Markus Meier <maekke@gentoo.org> openal-1.13.ebuild:
  arm stable, bug #388577

  02 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> openal-1.13.ebuild:
  x86 stable wrt bug #388577

  30 Oct 2011; Jeroen Roovers <jer@gentoo.org> openal-1.13.ebuild:
  Stable for HPPA (bug #388577).

  29 Oct 2011; Markos Chandras <hwoarang@gentoo.org> openal-1.13.ebuild:
  Stable on amd64 wrt bug #388577

*openal-1.13 (19 Mar 2011)

  19 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> +openal-1.13.ebuild:
  Version bump.

  10 Jun 2010; Jeroen Roovers <jer@gentoo.org> openal-1.11.753.ebuild:
  Stable for HPPA (bug #309083).

  23 May 2010; Raúl Porcel <armin76@gentoo.org> openal-1.11.753.ebuild:
  alpha/arm/ia64/sparc stable wrt #309083

*openal-1.12.854 (12 Apr 2010)

  12 Apr 2010; Samuli Suominen <ssuominen@gentoo.org>
  +openal-1.12.854.ebuild:
  Version bump.

  08 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
  openal-1.11.753.ebuild:
  stable x86, bug 309083

  21 Mar 2010; Brent Baude <ranger@gentoo.org> openal-1.11.753.ebuild:
  stable ppc64, bug 309083

  18 Mar 2010; Markos Chandras <hwoarang@gentoo.org> openal-1.11.753.ebuild:
  Stable on amd64 wrt bug #309083

  15 Mar 2010; nixnut <nixnut@gentoo.org> openal-1.11.753.ebuild:
  ppc stable #309083

*openal-1.11.753 (28 Jan 2010)

  28 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  +openal-1.11.753.ebuild:
  Version bump.

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  openal-1.10.622.ebuild:
  Transfer Prefix keywords

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org> openal-1.9.563.ebuild:
  ia64/sparc stable wrt #287653
