@@ -8,13 +8,17 @@ DIST libogg-1.3.0.tar.xz 289384 RMD160 fb6dcdadeccabbd8555e007f9efd28fc11708ba5 
 EBUILD libogg-1.2.0.ebuild 767 RMD160 7e604529c679095ad8d5d94cd40e29faa2342b5c SHA1 b67156a1cdd0afb00393421193a1cd97cf5a0bd9 SHA256 f0afbbbf789af964af91499197f95f3e0db14d530b83103b9d30d6036fa23f64
 EBUILD libogg-1.2.1.ebuild 829 RMD160 0340a40575cb128212977e7d78aa2b46803cc330 SHA1 0669e74d80170c49d946d2c7206c410f66c11dd8 SHA256 544d44af395b8d143cca2e708682d94623418a8146cf493dc01964d815b27eb9
 EBUILD libogg-1.2.2.ebuild 829 RMD160 a448c02e6adeefe6539988586c3d66e570cd666f SHA1 b8d445e5cdc2ae9badb4e9d524bb614715f7922f SHA256 4ebdf638ab4cd9ba35628179653071e63a4e51fb98ac652a8d122cee54095ace
-EBUILD libogg-1.3.0.ebuild 656 RMD160 51ff10a8493e29a3c5854d3c29f7c58b25836a35 SHA1 8e9aedc44ac061a30005626cbf31ab4c8731e405 SHA256 d793b18fd24969d9e7e5976f03dfb8aaf23fdfc788f73aa7de78f44d59dd29e3
-MISC ChangeLog 9058 RMD160 306191f43ffa56ac89ac6c919559a0119048af6b SHA1 b5b462e5bc5f604218d087405b2a10062f1a3a0f SHA256 00aae427c9fd1e17d1fe2f517f785a303ee505a9509c6f9d6e07925798f562b6
+EBUILD libogg-1.3.0.ebuild 654 RMD160 58f27f5dfdd5bfbe67040dae68458b5f034bed8f SHA1 a544afb6b9b26a7ea778e19c5ef2d20b09007266 SHA256 1942c286ebbeef01cd5aa72ae02babfe485d9300c3779d79e37d7d97abd4d2d6
+MISC ChangeLog 9167 RMD160 bf9e65fec0f3647b7daf86aba21f4d14bde52e22 SHA1 9da1a531dabaf7960d74a579b2eba62633116af0 SHA256 80e11317f4c3f784cc6fb8d44c41a22d33bd39fe6a2999ceb5bfdff4d6bd1470
 MISC metadata.xml 248 RMD160 05122080e3580393675ec87101f0eb48aba15ea5 SHA1 8f9b5d80a666c1f111e7a6e61c66a298ed67a408 SHA256 790cfd8d63ed9248363a7e773fd9bdad79266c4153368dceb5109a63b2a2aa8f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk9BMiQACgkQuQc30/atMkALvQCfWCnXg2s4seQMIEmDSilN2C4X
-KBgAni9kkUSAXfUIz3OA7fyBZ//uusAa
-=rmqb
+iQEcBAEBAgAGBQJPUTNyAAoJEEdUh39IaPFNbMgH/RMZUGnmBJigYCJKLrdVMIRa
++q9JqMMo0SFLnPb8ywKxi1yd8Ex3iAI6c83U1dmBPWNkkl8Bw9pi8GRACDr++g6R
+iEz8nwsRw9fWPSfB2+Ztj1M/O5eNs9jsyHEjHHvx0dERctbUxEogkTPuViOiYCh/
+H3BjTV7I2tMlDFSFrYkCKgDfdTSHQ2N6bO8v/TRyxUelfTcwMa/3DE1sEQbqPFWq
+DxxpHeywW9SdE51vUKOwT9Cr6oi5XU49XKkS9immNOTfTpyRXLo0YxlNRPldaFzz
+CPONrgvvKNuRv3KLIaGeAIaMJ39peGac4h6cc7AHqIqmfoeESUKVMfv8ZynYRp8=
+=X9Yz
 -----END PGP SIGNATURE-----
