@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/openal-1.13.ebuild,v 1.6 2011/11/26 18:27:02 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/openal-1.13.ebuild,v 1.7 2012/03/02 20:50:52 ssuominen Exp $
 
 EAPI=3
 inherit cmake-utils
@@ -13,7 +13,7 @@ SRC_URI="http://kcat.strangesoft.net/openal-releases/${MY_P}.tar.bz2"
 
 LICENSE="LGPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 ~mips ~ppc ~ppc64 sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux"
+KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux"
 IUSE="alsa debug oss portaudio pulseaudio"
 
 RDEPEND="alsa? ( media-libs/alsa-lib )
