@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/openal
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/ChangeLog,v 1.148 2011/11/26 18:27:02 armin76 Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openal/ChangeLog,v 1.149 2012/03/02 20:50:52 ssuominen Exp $
+
+  02 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> openal-1.13.ebuild:
+  ppc/ppc64 stable wrt #388577
 
   26 Nov 2011; Raúl Porcel <armin76@gentoo.org> openal-1.13.ebuild:
   alpha/ia64/sparc stable wrt #388577
